--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,6 +17,7 @@ find_package(glm CONFIG REQUIRED)
 add_executable(tron_wallpaper
     src/main.cpp
     src/shader.cpp
+    src/tetrahedron.cpp
 )
 
 target_include_directories(tron_wallpaper
