--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,6 +18,7 @@ add_executable(tron_wallpaper
     src/main.cpp
     src/shader.cpp
     src/tetrahedron.cpp
+    src/wallpaper_utils.cpp
 )
 
 target_include_directories(tron_wallpaper
