--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,10 @@ project(OpenGLApp LANGUAGES CXX)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
+if (MSVC)
+    set(CMAKE_MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>" CACHE STRING "" FORCE)
+endif()
+
 # GLFW
 find_package(glfw3 CONFIG REQUIRED)
 
@@ -36,7 +40,6 @@ target_link_libraries(tron_wallpaper
 # MSVC niceties
 if (MSVC)
     target_compile_options(tron_wallpaper PRIVATE /W4 /permissive-)
-    set(CMAKE_MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>" CACHE STRING "" FORCE)
 endif()
 
 set_target_properties(tron_wallpaper PROPERTIES
