Update HDR multipler and other settings, some seem ineffective atm. . .

--- a/tron_config.ini
+++ b/tron_config.ini
@@ -1,11 +1,15 @@
 # Tron Wallpaper Configuration
-color_red=0.929412
-color_green=0.262745
-color_blue=0.596078
+color_red=0
+color_green=0.494118
+color_blue=1
 simulation_speed=0.5
-thickness=1.06
-bloom_power=9.5
-bloom_distance=1.1
-bloom_flicker_intensity=0.2
+thickness=1.23
+bloom_power=0.9
+bloom_distance=1
+bloom_flicker_intensity=0.5
 cycle_speed=2.1
 cycle_speed_randomness=0.53
+hdr_multiplier=5.15
+edge_smoothing=0.4
+antialiasing_min=0.58
+antialiasing_max=1
